--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
             <artifactId>spring-tx</artifactId>
             <version>5.2.0.RELEASE</version>
         </dependency>
+
+        <!-- oracle -->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc7</artifactId>
+            <version>12.1.0.2</version>
+        </dependency>
     </dependencies>
 
 </project>
